# kubernetes-agent

./: .bazelrc  .dockerignore  .gitignore  .golangci.yml  BUILD.bazel  CONTRIBUTING.md  Dangerfile  Dockerfile  Makefile  README.md  WORKSPACE  go.mod  go.sum  tools.go
cmd/: BUILD.bazel  cmd.bzl  utils.go
cmd/agentk/: BUILD.bazel  main.go
cmd/agentk/agentkapp/: BUILD.bazel  agent_id.go  agent_id_test.go  api.go  api_test.go  app.go  app_internal_server.go  app_test.go  doc.go  feature_tracker.go  feature_tracker_test.go  leader_election_test.go  leader_module_wrapper.go  leader_module_wrapper_test.go  leader_runner.go  leader_runner_test.go  logz.go  mock_for_test.go  module_runner.go  module_runner_test.go  rpc_api.go  value_holder.go
cmd/agentk/agentkapp/gomock_reflect_561387360/: prog.go
cmd/cli/: BUILD.bazel
cmd/cli/generate/: generate.go
cmd/kas/: BUILD.bazel  main.go
cmd/kas/kasapp/: BUILD.bazel  agent_rpc_api.go  agent_rpc_api_test.go  api.go  api_test.go  app.go  app_agent_server.go  app_api_server.go  app_internal_server.go  app_private_api_server.go  app_private_api_server_test.go  configured_app.go  configured_app_test.go  defaulting.go  doc.go  kasapp.extra_methods.go  kasapp.pb.go  kasapp.pb.validate.go  kasapp.proto  kasapp_proto_docs.md  mock_for_test.go  router.go  router_agent.go  router_kas.go  router_kas_stream_forwarder.go  router_kas_stream_forwarder_test.go  router_kas_tunnel_finder.go  router_kas_tunnel_finder_test.go  router_test.go  rpc_api.go  rpc_api_test.go  server_api.go  server_api_test.go
cmd/kas/kasapp/fake/: agent_rpc_api.go
cmd/kas/kasapp/plural/: agent_rpc_api.go
internal/gitaly/copied/gittest/: BUILD.bazel  pktline.go
internal/gitaly/copied/stats/: BUILD.bazel  reference_discovery.go  reference_discovery_test.go
internal/gitlab/: BUILD.bazel  client.go  client_options.go  client_test.go  do_options.go  error.go  gitlab.pb.go  gitlab.proto  response_handlers.go  response_handlers_test.go  types.go
internal/gitlab/api/: BUILD.bazel  api.pb.go  api.pb.validate.go  api.proto  api_extra.go  authorize_proxy_user.go  authorize_proxy_user_test.go  get_agent_info.go  get_agent_info_test.go  get_allowed_agents.go  get_allowed_agents_test.go  get_project_info.go  get_project_info_test.go  helper.go  helper_test.go  module_request.go  post_agent_configuration.go  post_agent_configuration_test.go  send_usage_ping.go  validation_test.go  verify_project_access.go  verify_project_access_test.go
internal/module/agent_registrar/agent/: BUILD.bazel  factory.go  module.go  module_test.go
internal/module/agent_registrar/server/: BUILD.bazel  factory.go  module.go  server.go  server_test.go
internal/module/agent_tracker/: BUILD.bazel  agent_tracker.pb.go  agent_tracker.pb.validate.go  agent_tracker.proto  agent_tracker_proto_docs.md  agent_tracker_test.go  tracker.go  tracker_test.go
internal/module/agent_tracker/rpc/: BUILD.bazel  rpc.pb.go  rpc.pb.validate.go  rpc.proto  rpc_grpc.pb.go
internal/module/agent_tracker/server/: BUILD.bazel  factory.go  module.go  server.go
internal/module/modagent/: BUILD.bazel  api.go  doc.go  mock_for_test.go  rpc_api.go  worker_manager.go  worker_manager_test.go
internal/module/modserver/: BUILD.bazel  agent_rpc_api.go  api.go  modserver.pb.go  modserver.pb.validate.go  modserver.proto  rpc_api.go
internal/module/modserver/notifications/: BUILD.bazel  api.pb.go  api.pb.validate.go  api.proto  subscriber.go
internal/module/modshared/: BUILD.bazel  api.go  modshared.pb.go  modshared.proto  rpc_api_stub.go
internal/module/observability/: BUILD.bazel  metric_server.go  metric_server_test.go
internal/module/observability/agent/: BUILD.bazel  factory.go  module.go
internal/module/observability/server/: BUILD.bazel  defaulting.go  factory.go  module.go
internal/module/reverse_tunnel/: BUILD.bazel  doc.go  mock_for_test.go  reverse_tunnel_agent_plumbing_for_test.go  reverse_tunnel_server_plumbing_for_test.go  reverse_tunnel_test.go  tunnel.go  tunnel_registry.go  tunnel_registry_test.go  tunnel_test.go
internal/module/reverse_tunnel/agent/: BUILD.bazel  connection.go  connection_manager.go  connection_manager_test.go  connection_test.go  factory.go  module.go  module_test.go
internal/module/reverse_tunnel/info/: BUILD.bazel  info.extra_methods.go  info.pb.go  info.pb.validate.go  info.proto  info_proto_docs.md  validation_test.go
internal/module/reverse_tunnel/rpc/: BUILD.bazel  rpc.extra_methods.go  rpc.pb.go  rpc.pb.validate.go  rpc.proto  rpc_grpc.pb.go  rpc_proto_docs.md  validation_test.go
internal/module/reverse_tunnel/server/: BUILD.bazel  factory.go  module.go  module_test.go  server.go  server_test.go
internal/module/reverse_tunnel/test/: BUILD.bazel  (+3 more)
internal/module/usage_metrics/: BUILD.bazel  api_test.go
internal/tool/cache/: BUILD.bazel  cache.go  cache_with_err.go  cache_with_err_test.go
internal/tool/git/: BUILD.bazel  git.go  git_test.go
internal/tool/httpz/: BUILD.bazel  conn_wrappers.go  conn_wrappers_test.go  roundtripper_test.go  run_server.go  tools.go
internal/tool/logz/: BUILD.bazel  helpers.go  logz.go
internal/tool/metric/: BUILD.bazel  counter.go  metric.go
internal/tool/redistool/: BUILD.bazel  doc.go  err_cacher.go  err_cacher_test.go  expiring_hash.go  expiring_hash_api.go  expiring_hash_test.go  log.go  mock_for_test.go  redistool.go  redistool.pb.go  redistool.proto  token_limiter.go  token_limiter_test.go  transaction.go
internal/tool/retry/: BUILD.bazel  retry.go  single_run.go
internal/tool/syncz/: BUILD.bazel  mutex.go  rwmutex.go  subscriptions.go  subscriptions_test.go  synz.go
pkg/agentcfg/: BUILD.bazel  agentcfg.pb.go  agentcfg.pb.validate.go  agentcfg.proto  agentcfg_extra.go  agentcfg_extra_test.go  agentcfg_proto_docs.md  validation_test.go
pkg/entity/: BUILD.bazel  entity.pb.go  entity.pb.validate.go  entity.proto  entity_extra.go  entity_proto_docs.md
pkg/event/: BUILD.bazel  event.pb.go  event.pb.validate.go  event.proto  event_proto_docs.md
pkg/ruby/: BUILD.bazel  kas-grpc.gemspec
pkg/ruby/lib/: kas-grpc.rb
(+1005 files in other folders)
