load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_ash2k_bazel_tools//buildozer:def.bzl", "buildozer")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# See https://github.com/bazelbuild/bazel-gazelle#directives

# See https://github.com/bazelbuild/rules_go/blob/master/proto/core.rst#option-2-use-pre-generated-pbgo-files
# gazelle:proto disable_global
# gazelle:go_naming_convention import
# gazelle:go_naming_convention_external import
# gazelle:map_kind go_test go_custom_test //build:build.bzl

# See https://github.com/bazelbuild/bazel-gazelle/releases/tag/v0.32.0.
# gazelle:resolve proto proto google/rpc/status.proto @go_googleapis//google/rpc:status_proto
# gazelle:resolve proto go google/rpc/status.proto  @org_golang_google_genproto//googleapis/rpc/status

gazelle(
    name = "gazelle",
    prefix = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16",
)

gazelle(
    name = "gazelle_fix",
    command = "fix",
    prefix = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16",
)

buildifier(
    name = "buildifier",
)

buildifier(
    name = "buildifier_check",
    mode = "check",
)

buildifier(
    name = "buildifier_fix",
    lint_mode = "fix",
)

buildozer(
    name = "buildozer",
    commands = "//build:buildozer_commands.txt",
)
