load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "build_info.go",
        "utils.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/cmd",
    visibility = [
        "//cmd:__subpackages__",
    ],
    deps = ["@com_github_spf13_cobra//:cobra"],
)
