load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("//cmd:cmd.bzl", "define_command_targets")

go_library(
    name = "kas_lib",
    srcs = ["main.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/cmd/kas",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "//cmd/kas/kasapp",
    ],
)

define_command_targets(
    name = "kas",
    arm64_targets = False,
    arm_targets = False,
    binary_embed = [":kas_lib"],
)

write_source_file(
    name = "extract_kas",
    diff_test = False,
    executable = True,
    in_file = ":kas",
    out_file = "kas",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

write_source_file(
    name = "extract_kas_race",
    diff_test = False,
    executable = True,
    in_file = ":kas_race",
    out_file = "kas_race",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
