load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:proto.bzl", "go_proto_generate")

go_proto_generate(
    src = "agentcfg.proto",
    with_md_docs = True,
    workspace_relative_target_directory = "pkg/agentcfg",
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate:validate_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

go_library(
    name = "agentcfg",
    srcs = [
        "agentcfg.pb.go",
        "agentcfg.pb.validate.go",
        "agentcfg_extra.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v15/pkg/agentcfg",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/gitaly",
        "@com_github_envoyproxy_protoc_gen_validate//validate:go_custom_library",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)

go_custom_test(
    name = "agentcfg_test",
    srcs = [
        "agentcfg_extra_test.go",
        "roundtrip_test.go",
        "validation_test.go",
    ],
    embed = [":agentcfg"],
    deps = [
        "//internal/tool/testing/testhelpers",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
