load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:proto.bzl", "go_proto_generate")

go_proto_generate(
    src = "agent_tracker.proto",
    deps = [
        "//pkg/entity:proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_library(
    name = "agent_tracker",
    srcs = [
        "agent_tracker.pb.go",
        "api.go",
        "tracker.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/module/agent_tracker",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/tool/errz",
        "//internal/tool/logz",
        "//internal/tool/redistool",
        "//pkg/entity",
        "@com_github_redis_rueidis//:rueidis",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)

go_custom_test(
    name = "agent_tracker_test",
    srcs = [
        "agent_tracker_test.go",
        "tracker_test.go",
    ],
    embed = [":agent_tracker"],
    deps = [
        "//internal/tool/redistool",
        "//internal/tool/testing/matcher",
        "//internal/tool/testing/mock_redis",
        "//internal/tool/testing/mock_tool",
        "//pkg/entity",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//zaptest",
    ],
)
