load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "modagent",
    srcs = [
        "api.go",
        "rpc_api.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v14/internal/module/modagent",
    visibility = [
        "//cmd/agentk:__subpackages__",
        "//internal/module/cilium_alert/agent:__subpackages__",
        "//internal/module/gitops/agent:__subpackages__",
        "//internal/module/kubernetes_api/agent:__subpackages__",
        "//internal/module/observability/agent:__subpackages__",
        "//internal/module/reverse_tunnel/agent:__subpackages__",
        "//internal/module/reverse_tunnel/test:__subpackages__",
        "//internal/tool/testing/mock_modagent:__subpackages__",
    ],
    deps = [
        "//internal/module/modshared",
        "//pkg/agentcfg",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@io_k8s_kubectl//pkg/cmd/util",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)
