load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:proto.bzl", "go_proto_generate")

go_proto_generate(
    src = "modserver.proto",
    workspace_relative_target_directory = "internal/module/modserver",
)

go_library(
    name = "modserver",
    srcs = [
        "api.go",
        "modserver.pb.go",
        "rpc_api.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v14/internal/module/modserver",
    visibility = [
        "//cmd/kas:__subpackages__",
        "//internal/module/agent_configuration/server:__subpackages__",
        "//internal/module/agent_tracker/server:__subpackages__",
        "//internal/module/configuration_project/rpc:__subpackages__",
        "//internal/module/configuration_project/server:__subpackages__",
        "//internal/module/gitlab_access/server:__subpackages__",
        "//internal/module/gitops/server:__subpackages__",
        "//internal/module/google_profiler/server:__subpackages__",
        "//internal/module/kubernetes_api/server:__subpackages__",
        "//internal/module/observability/server:__subpackages__",
        "//internal/module/reverse_tunnel/server:__subpackages__",
        "//internal/module/reverse_tunnel/test:__subpackages__",
        "//internal/module/usage_metrics/server:__subpackages__",
        "//internal/tool/testing/mock_modserver:__subpackages__",
    ],
    deps = [
        "//internal/api",
        "//internal/gitaly",
        "//internal/gitlab",
        "//internal/module/modshared",
        "//internal/module/usage_metrics",
        "//pkg/kascfg",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_uber_go_zap//:zap",
    ],
)
